# js-pdk

./: .gitignore  Cargo.toml  Makefile  README.md  bundle.js  example-schema.yaml  host.py  index.mjs  install-wasi-sdk.ps1  install-wasi-sdk.sh  install-windows.ps1  install.sh  interface.d.ts  out.wasm  plugin.js  script.js  test.wasm  test.wat
.cargo/: config
.github/: CODEOWNERS
.github/workflows/: ci.yml  ci_install.yml  publish.yml
crates/cli/: Cargo.toml  build.rs  script.js
crates/cli/src/: interface_parser.rs  main.rs  opt.rs  options.rs  shim.rs  shims.rs  ts_parser.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: globals.rs  lib.rs
crates/core/src/prelude/: README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
crates/core/src/prelude/src/: atob-btoa.ts  buffer.ts  compat.ts  config.ts  console.ts  crypto.ts  date.ts  dom-exception.ts  event.ts  fetch.ts  host.ts  http.ts  index.js  index.ts  memory-handle.ts  memory.ts  performance.ts  structured-clone.ts  text-decoder.ts  text-encoder.ts  var.ts
crates/core/src/prelude/types/: index.d.ts  plugin-interface.d.ts  polyfills.d.ts
crates/core/src/src/: index.js
examples/async_exception/: esbuild.js  package-lock.json  package.json  script.js  tsconfig.json
examples/async_exception/src/: index.d.ts  index.ts
examples/atob_btoa/: script.js
examples/base64/: script.js
examples/buffer/: script.js
examples/buffer_npm/: buffer-shim.js  esbuild.js  package-lock.json  package.json
examples/buffer_npm/src/: index.js
examples/bundled/: package-lock.json  package.json
examples/bundled/src/: index.ts
examples/compat/: script.js
examples/console/: script.js
examples/console_extra/: script.js
examples/console_table/: script.js
examples/crypto/: script.js
examples/encode_into/: script.js
examples/event/: script.js
examples/exception/: jsconfig.json  script.js
examples/exports/: script.d.ts  script.js
examples/fetch/: script.js
examples/host_funcs/: go.mod  go.sum  host.py  main.go  requirements.txt  script.d.ts  script.js
examples/kitchen-sink/: README.md  package-lock.json  package.json
examples/kitchen-sink/src/: index.d.ts  index.ts
examples/perf/: script.js
examples/react/: esbuild.js  package-lock.json  package.json
examples/react/src/: index.d.ts  index.tsx
examples/simple_js/: jsconfig.json  script.d.ts  script.js
examples/simple_js/extismasync/: index.js  package.json
examples/structured_clone/: script.js
examples/subtle_digest/: script.js
examples/try-catch/: script.js
