[package]
name = "js-pdk-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "extism-js"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
wizer = "^3.0.0"
structopt = "0.3"
binaryen = "0.12.0"
swc_atoms = "0.6.5"
swc_common = "0.33.10"
swc_ecma_ast = "0.110.11"
swc_ecma_parser = "0.141.29"
wasm-encoder = "0.38.1"
wasmparser = "0.118.1"
log = "0.4.20"
