[package]
name = "js-pdk-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "extism-js"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
wizer = "4.0.0"
structopt = "0.3"
swc_atoms = "0.6.5"
swc_common = "0.33.10"
swc_ecma_ast = "0.112"
swc_ecma_parser = "0.143"
wagen = "0.1"
log = "0.4.20"
tempfile = "3.8.1"
env_logger = "0.11"
