[package]
name = "js-pdk-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = "1"
once_cell = "1.16"
anyhow = { workspace = true }
quickjs-wasm-rs = "3"
chrono = { version = "0.4", default_features = false, features = ["clock"] }
base64 = "0.22.1"

[lib]
crate_type = ["cdylib"]
