[package]
name = "js-pdk-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = "1.3"
once_cell = "1.16"
anyhow = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rquickjs = { version = "0.8", features = ["array-buffer", "bindgen"]}
base64 = "0.22.1"

[lib]
crate-type = ["cdylib"]
